--- a/components/Button/Button.module.css
+++ b/components/Button/Button.module.css
@@ -32,3 +32,13 @@
 	color: var(--white);
 	background-color: var(--primary-hover);
 }
+
+.down {
+	transform: rotate(90deg);
+	transition: all 0.2s;
+}
+
+.primary svg,
+.ghost:hover svg {
+	fill: var(--white);
+}
